<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">乐见</string>
    <string name="app_login">登录</string>
    <string name="app_register">注册</string>
    <string name="app_user_profile">用户信息</string>
    <string name="app_user_setting">用户设置</string>
    
    <string name="hello">Hello World, BarCodeTestActivity!</string>
    <string name="scan_text">扫描数据</string>
    <string name="title_activity_scan">二维码扫描</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    
    
    <string name="login_btn">登录</string>
    <string name="login_qq">第三方登录</string>
    <string name="add">添加好友</string>
    <string name="startlocation">开始定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="title_zixun">资讯</string>
    <string name="group_map">地图</string>
    <string name="group_conversation">乐见</string>
    <string name="group_contact">通信录</string>
    <string name="group_me">我</string>
    <string name="action_plus">功能</string>
    <string name="plus_realtime_share">轨迹分享</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_location_share">位置分享</string>
    <string name="plus_scan">扫描二维码</string>
    <string name="register_user">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_email">用户邮箱</string>
    <string name="register_btn">注册</string>
    <string name="login_user">用户名</string>
    <string name="login_password">密码</string>

    <!-- me_fragment -->
    <string name="username">用户名</string>
    <string name="setting">设置</string>
    <string name="logout">退出登录</string>

    <!-- user_profile -->
    <string name="icon">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="two_dimension_code">二维码名片</string>
    <string name="location">地区</string>
    <string name="none">未设置</string>
    <string name="signature">个性签名</string>
    <!-- user/signature -->
    <string name="save">保存</string>
    
    <!-- address -->
    <string name="anhui">安徽</string>
    <string name="aomen">澳门</string>
    <string name="chongqing">重庆</string>
    <string name="beijing">北京</string>
    <string name="fujian">福建</string>
    <string name="guangdong">广东</string>
    <string name="gansu">甘肃</string>
    <string name="guangxi">广西</string>
    <string name="guizhou">贵州</string>
    <string name="hebei">河北</string>
    <string name="hubei">湖北</string>
    <string name="heilongjiang">黑龙江</string>
    <string name="hainan">海南</string>
    <string name="henan">河南</string>
    <string name="hunan">湖南</string>
    <string name="jilin">吉林</string>
    <string name="jiangsu">江苏</string>
    <string name="jiangxi">江西</string>
    <string name="liaoning">辽宁</string>
    <string name="neimenggu">内蒙古</string>
    <string name="ningxia">宁夏</string>
    <string name="qinghai">青海</string>
    <string name="sichuan">四川</string>
    <string name="shandong">山东</string>
    <string name="shanghai">上海</string>
    <string name="shanxi_shan">陕西</string>
    <string name="shanxi_jin">山西</string>
    <string name="tianjin">天津</string>
    <string name="taiwan">台湾</string>
    <string name="xizang">西藏</string>
    <string name="xianggang">香港</string>
    <string name="xinjiang">新疆</string>
    <string name="yunnan">云南</string>
    <string name="zhejiang">浙江</string>
    <!-- friend profile -->
    
    <string name="detail">详细资料</string>
    <string name="notification">通知</string>
    <string name="agree">确认</string>
    
    <!--conatct profile  -->
    <string name="contactUser">联系人</string>
    <string name="shareLoc">共享位置</string>
    
    <!--sharelcation  -->
	<string name="closeShare">关闭</string>
	<string name="addShare">加入</string>
	<string name="logoutShare">退出</string>
	<!-- barcode  -->
	<string name="barcode_label">二维码名片</string>
	<string name="barcode_scanme">扫一扫上面的二维码图案，加我乐见</string>
	<string name="barcode_cancle">取消</string>
	
	<!-- user  pic  -->
	<string name="user_pic_label">图片</string>
	<string name="user_pic_takephoto">拍摄照片</string>
	<string name="user_pic_use">使用</string>
	
	<string name="clip_pic">裁剪</string>
	<string name="clip_pic_result">最终图片</string>
	
	
		
    <!-- user_setting -->
    <string name="modify_password">修改密码</string>
    <string name="tempshare">开启临时共享</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <!-- feedback -->
	<string name="youremail">您的邮箱</string>    
    <!--modify_password  -->
    <string name="old_password">密码</string>
    <string name="new_password">新密码</string>
    <string name="modify">修改</string>
    <!-- feedback -->
    <string name="send_feedback">提交</string>
    <string name="send_feedback_hint">请输入您要反馈的问题，乐见会尽快回复您,(づ￣ 3￣)づ</string>
    
    <!-- about -->
	<string name="about_author">作者：bazingagain 版权所有</string>
	<string name="about_copyright">Copyright © 2016 LeJian</string>
	<string name="about_allrights">All Rights Reserved</string>
</resources>