<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:gravity="center"
        
        android:layout_height="@dimen/common_height" >

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/nickname"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="@dimen/common_height" >

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex" />

        <TextView
            android:id="@+id/sex"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="@dimen/common_height" >

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <TextView
            android:layout_weight="3"
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none" />

    </LinearLayout>


</LinearLayout>
