<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent" >
    <com.Leon.lejian.view.LineEditText
        android:id="@+id/loginUser"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:layout_marginTop="82dp"
        android:hint="@string/login_user"
        android:ems="10"
        android:inputType="textPersonName" />

    <com.Leon.lejian.view.LineEditText
        android:id="@+id/loginPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/loginUser"
        android:layout_alignLeft="@+id/loginUser"
        android:layout_below="@+id/loginUser"
        android:layout_marginTop="44dp"
        android:hint="@string/login_password"
        android:ems="10"
         android:background="@null"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginUser"
        android:layout_alignRight="@+id/loginUser"
        android:layout_below="@+id/loginPassword"
        android:layout_marginTop="29dp"
        android:background="@drawable/wechat_button_green"
        android:text="@string/login_btn" />

    <Button
        android:id="@+id/login_registerBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginBtn"
        android:layout_alignRight="@+id/loginBtn"
        android:layout_below="@+id/loginBtn"
        android:layout_marginTop="30dp"
        android:background="@drawable/wechat_button_green"
        android:text="@string/register_btn" />

</RelativeLayout>