<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/about_allrights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/about_allrights" />

    <TextView
        android:id="@+id/about_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/about_allrights"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/about_author" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/about_allrights"
        android:layout_centerHorizontal="true"
        android:text="@string/about_copyright" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/about_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/about_title"
        android:layout_marginTop="45dp"
        android:text="        乐见是一款实时位置分享APP，可以通过好友、短信、微信、QQ等方式向他人分享自己的实时运动轨迹，可以查看一个或多个他人的位置轨迹。乐见提供极简的用户界面，及实用的位置分享功能。"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
