<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Main" >

    <LinearLayout
        android:background="@color/white"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical" >

        <!-- <include layout="@layout/activity_location" /> -->
    </LinearLayout>

    <RadioGroup
        android:background="@color/white_smoke"
        android:id="@+id/radio_group_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_news"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:text="@string/group_map" >
        </RadioButton>

        <RadioButton
            android:id="@+id/radio_tushang"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:button="@null"
            android:text="@string/group_conversation" >
        </RadioButton>

        <RadioButton
            android:id="@+id/radio_luntan"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:gravity="center"
            android:text="@string/group_contact" >
        </RadioButton>

        <RadioButton
            android:id="@+id/radio_setting"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:gravity="center"
            android:text="@string/group_me" >
        </RadioButton>
    </RadioGroup>

</LinearLayout>