<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/user_profile"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="@dimen/common_height" >

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

    </LinearLayout>
    <View 
        android:layout_height="1dip" 
        android:layout_width="fill_parent"
        android:background="#FF909090"/>

    <LinearLayout
        android:id="@+id/user_setting"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="@dimen/common_height" >

        <TextView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting" />

    </LinearLayout>
    <View 
        android:layout_height="1dip" 
        android:layout_width="fill_parent"
        android:background="#FF909090"/>

    <LinearLayout
        android:id="@+id/user_logout"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="@dimen/common_height" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout" />

    </LinearLayout>

</LinearLayout>
