<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/modify_password"
        android:layout_width="fill_parent"
        android:background="@color/white_smoke"
        android:gravity="center"
        android:layout_height="@dimen/common_height" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_password" />

    </LinearLayout>
    <View 
        android:layout_height="1dip" 
        android:layout_width="fill_parent"
       android:background="@color/white"/>
     <LinearLayout
        android:id="@+id/feedback"
        android:background="@color/white_smoke"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="@dimen/common_height" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback" />

    </LinearLayout>
    <View 
        android:layout_height="1dip" 
        android:layout_width="fill_parent"
        android:background="@color/white"/>

    <LinearLayout
        android:id="@+id/about"
        android:background="@color/white_smoke"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="@dimen/common_height" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about" />

    </LinearLayout>
    
    

</LinearLayout>
