<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_oldPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/old_password" />

            <TextView
                android:layout_marginTop="40dp"
                android:id="@+id/label_newPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/new_password" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <com.Leon.lejian.view.LineEditText
                android:id="@+id/editText_oldPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:inputType="textPassword" />

            <com.Leon.lejian.view.LineEditText
                android:layout_marginTop="40dp"
                android:id="@+id/editText_newPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/modifyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="40dp"
        android:background="@drawable/wechat_button_green"
        android:text="@string/modify" />

</RelativeLayout>